adicionado a base de código html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,31 @@
     <link rel="stylesheet" href="reset.css">
     <title>Netflix - Login</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="card">
+            <h2>Entrar</h2>
+            <form method="get" action="index.html">
+                <input type="text" name="q" placeholder="Email ou número de celular">
+                <br>
+                <input type="password" name="q" placeholder="Senha">
+                <br>
+                <input type="submit" value="Entrar">
+            </form>
+            <h2>OU</h2>
+            <form method="get" action="index.html">
+                <input type="submit" value="Usar um código de acesso">
+            </form>
+            <a href="#">Esqueceu a senha?</a>
+            <br>
+            <input type="checkbox" name="lembrar" id="lembrar" checked>
+            <label for="lembrar">Lembre-se de mim</label>
+            <p>Novo por aqui? <a href="#"> Assine agora.</a></p>
+            <p>Esta página é protegida pelo Google reCAPTCHA para garantir que você não é um robô. <a href="#">Saiba
+                    Mais.</a></p>
+        </div>
+    </div>
 </body>
+
 </html>
