fiz o logo netflix ser clicavel, apenas modificando o html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="./img/Netflix-Logo.png" alt="Netflix-Logo">
+            <a href="#"><img src="./img/Netflix-Logo.png" alt="Netflix-Logo"></a>
         </div>
         <div class="card">
             <h2 class="entrar">Entrar</h2>
