feitas mudanças no html e css

--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
                 <br>
                 <button class="entratbtn">Entrar</button>
             </form>
-            <h2>OU</h2>
-            <form method="get" action="index.html">
-                <input type="submit" value="Usar um código de acesso">
-            </form>
-            <a href="#">Esqueceu a senha?</a>
+            <h2 class="ou-class">OU</h2>
+            <button class="codigo-acesso">Usar um código de acesso</button>
+            <div>
+                <ul>
+                    <li><input class="checkbox" type="checkbox"checked></li>
+                    <li><a href="#">Esqueceu a senha?</a></li>
+                </ul>
+            </div>
             <br>
-            <input type="checkbox" name="lembrar" id="lembrar" checked>
             <label for="lembrar">Lembre-se de mim</label>
             <p>Novo por aqui? <a href="#"> Assine agora.</a></p>
             <p>Esta página é protegida pelo Google reCAPTCHA para garantir que você não é um robô. <a href="#">Saiba
