--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kumbh+Sans:wght@100..900&family=Manrope:wght@200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="shortcut icon" type="imagex/png" href="./img/netflix.svg">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="shortcut icon" type="imagex/png" href="./src/img/netflix.svg">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
     <title>Netflix - Login</title>
 </head>
 
 <body>
     <div class="container">
         <div class="logo">
-            <a href="#"><img src="./img/Netflix-Logo.png" alt="Netflix-Logo"></a>
+            <a href="#"><img src="./src/img/Netflix-Logo.png" alt="Netflix-Logo"></a>
         </div>
         <div class="card">
             <h2 class="entrar">Entrar</h2>
@@ -28,7 +28,7 @@
                     <span class="placeholder">Email ou número de celular</span>
 
                     <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" role="img" viewBox="0 0 16 16" width="16" height="16" data-icon="CircleXSmall" aria-hidden="true" class="default-ltr-cache-13htjwu e1vkmu653"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.5 8C14.5 11.5899 11.5899 14.5 8 14.5C4.41015 14.5 1.5 11.5899 1.5 8C1.5 4.41015 4.41015 1.5 8 1.5C11.5899 1.5 14.5 4.41015 14.5 8ZM16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM4.46967 5.53033L6.93934 8L4.46967 10.4697L5.53033 11.5303L8 9.06066L10.4697 11.5303L11.5303 10.4697L9.06066 8L11.5303 5.53033L10.4697 4.46967L8 6.93934L5.53033 4.46967L4.46967 5.53033Z" fill="currentColor"></path></svg> -->
-                    
+
                 </label>
                 <br>
                 <br>
@@ -43,10 +43,12 @@
                 <button class="entratbtn">Entrar</button>
             </form>
             <h2 class="ou-class">OU</h2>
-            <button class="codigo-acesso">Usar um código de acesso</button>
+            <div class="codigo-acesso-container">
+                <button class="codigo-acesso">Usar um código de acesso</button>
+            </div>
             <div>
                 <ul>
-                    <li><input class="checkbox" type="checkbox"checked></li>
+                    <li><input class="checkbox" type="checkbox" checked></li>
                     <li><a href="#">Esqueceu a senha?</a></li>
                 </ul>
             </div>
