feitas mudanças nos containers de recuparar senha, lembre-se de mim e novo por aqui, també ajusatada posicionameto dos mesmos

--- a/index.html
+++ b/index.html
@@ -46,15 +46,23 @@
             <div class="codigo-acesso-container">
                 <button class="codigo-acesso">Usar um código de acesso</button>
             </div>
-            <div>
-                <ul>
-                    <li><input class="checkbox" type="checkbox" checked></li>
-                    <li><a href="#">Esqueceu a senha?</a></li>
-                </ul>
+            <div class="esqueceu-senha-container">
+                <div class="esqueceu-senha">
+                    <a href="#">Esqueceu a senha?</a>
+                </div>
             </div>
-            <br>
-            <label for="lembrar">Lembre-se de mim</label>
-            <p>Novo por aqui? <a href="#"> Assine agora.</a></p>
+            <div class="lembrar-container">
+                <div class="lembrar">
+                    <input class="checkbox" type="checkbox" checked>
+                    <label>Lembre-se de mim</label>
+                </div>
+            </div>
+            <div class="novo-container">
+                <div class="novo">
+                    <p>Novo por aqui? <a href="#"> Assine agora.</a></p>
+                </div>
+            </div>
+
             <p>Esta página é protegida pelo Google reCAPTCHA para garantir que você não é um robô. <a href="#">Saiba
                     Mais.</a></p>
         </div>
