feita versão final desktop sem responsivo

--- a/index.html
+++ b/index.html
@@ -52,19 +52,27 @@
                 </div>
             </div>
             <div class="lembrar-container">
-                <div class="lembrar">
-                    <input class="checkbox" type="checkbox" checked>
-                    <label>Lembre-se de mim</label>
+                <div class="lembrar-transform">
+                    <div class="lembrar">
+                        <input class="checkbox" type="checkbox" checked>
+                        <label>Lembre-se de mim</label>
+                    </div>
                 </div>
             </div>
             <div class="novo-container">
-                <div class="novo">
-                    <p>Novo por aqui? <a href="#"> Assine agora.</a></p>
+                <div class="novo-transform">
+                    <div class="novo">
+                        <p>Novo por aqui? <a href="#"> Assine agora.</a></p>
+                    </div>
                 </div>
             </div>
-
-            <p>Esta página é protegida pelo Google reCAPTCHA para garantir que você não é um robô. <a href="#">Saiba
-                    Mais.</a></p>
+            <div class="captcha-container">
+                <div class="captcha-transform">
+                    <p>Esta página é protegida pelo Google reCAPTCHA para garantir que você não é um robô. <a
+                            href="#">Saiba
+                            Mais.</a></p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
