feita organização de arquivos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         rel="stylesheet">
     <link rel="shortcut icon" type="imagex/png" href="./src/img/netflix.svg">
     <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/card.css">
+    <link rel="stylesheet" href="./src/css/buttons.css">
+    <link rel="stylesheet" href="./src/css/links.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <title>Netflix - Login</title>
 </head>
